fixed project gap

--- a/src/components/project-card/project-card.style.css
+++ b/src/components/project-card/project-card.style.css
@@ -30,3 +30,9 @@
 .right-img {
   flex-direction: row-reverse;
 }
+
+.project-content {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
